# music_downloader

./: .gitignore  README.md  get_likes.py  get_likes.sh  metadata_extractor.py  pyproject.toml  requirements.txt  soundcloud_downloader.py
prompts/: SC_YT_DUR_COMPARE.md
soundcloud_likes/: README.md  __init__.py  fetcher.py  test_likes.py
src/music_downloader/: metadata.py
